Revert "updated entity"
This reverts commit 09e91f0212c37610806e432588476c64a243b77c.