@@ -5,7 +5,6 @@ import com.booking.dto.SearchTrainRequest;
 import com.booking.dto.TrainSearchResponse;
 import com.booking.entity.Station;
 import com.booking.entity.Train;
-import com.booking.entity.TrainRouteStation;
 import com.booking.entity.TrainSeatAvailability;
 import com.booking.repository.StationRepository;
 import com.booking.repository.TrainRepository;
@@ -16,10 +15,8 @@ import org.springframework.stereotype.Service;
 
 import java.time.DayOfWeek;
 import java.util.ArrayList;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Optional;
-import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -31,47 +28,46 @@ public class TrainServiceImpl implements TrainService {
 
     @Override
     public Train createTrain(CreateTrainRequest request) {
-        Train train = buildTrainFromRequest(request);
+
+        Station sourceStation = stationRepository.findById(request.getSourceStationId())
+                .orElseThrow(() -> new RuntimeException("Source station not found"));
+
+        Station destinationStation = stationRepository.findById(request.getDestinationStationId())
+                .orElseThrow(() -> new RuntimeException("Destination station not found"));
+
+        Train train = new Train();
+        train.setTrainNumber(request.getTrainNumber());
+        train.setTrainName(request.getTrainName());
+        train.setSourceStation(sourceStation);
+        train.setDestinationStation(destinationStation);
+        train.setDepartureTime(request.getDepartureTime());
+        train.setArrivalTime(request.getArrivalTime());
+        train.setTotalSeats(request.getTotalSeats());
+        train.setRunningDays(request.getRunningDays());
+
         return trainRepository.save(train);
     }
 
     @Override
     public List<TrainSearchResponse> searchTrains(SearchTrainRequest request) {
-        if (request.getTravelDate() == null) {
-            throw new RuntimeException("Travel date is required");
-        }
-
-        String sourceName = normalizeStationName(
-                request.getSourceStationName(),
-                "Source station name is required"
-        );
-        String destinationName = normalizeStationName(
-                request.getDestinationStationName(),
-                "Destination station name is required"
-        );
-        if (sourceName.equalsIgnoreCase(destinationName)) {
-            throw new RuntimeException("Source and destination must be different");
-        }
 
         DayOfWeek dayOfWeek = request.getTravelDate().getDayOfWeek();
 
         List<Train> trains = trainRepository
-                .findTrainsByRouteAndDay(
-                        sourceName,
-                        destinationName,
+                .findTrainsBySourceDestinationAndDay(
+                        request.getSourceStationName(),
+                        request.getDestinationStationName(),
                         dayOfWeek
                 );
 
         return trains.stream()
-                .map(train -> mapToResponse(train, request, sourceName, destinationName))
-                .toList();
+                .map(train -> mapToResponse(train, request))
+                .collect(Collectors.toList());
     }
 
     private TrainSearchResponse mapToResponse(
             Train train,
-            SearchTrainRequest request,
-            String sourceName,
-            String destinationName
+            SearchTrainRequest request
     ) {
 
         TrainSearchResponse response = new TrainSearchResponse();
@@ -80,15 +76,8 @@ public class TrainServiceImpl implements TrainService {
         response.setTrainNumber(train.getTrainNumber());
         response.setTrainName(train.getTrainName());
 
-        response.setSourceStation(
-                findStationNameInRoute(train, sourceName)
-                        .orElse(sourceName)
-        );
-        response.setDestinationStation(
-                findStationNameInRoute(train, destinationName)
-                        .orElse(destinationName)
-        );
-        response.setRouteStations(getRouteStationNames(train));
+        response.setSourceStation(train.getSourceStation().getName());
+        response.setDestinationStation(train.getDestinationStation().getName());
 
         response.setDepartureTime(train.getDepartureTime());
         response.setArrivalTime(train.getArrivalTime());
@@ -116,104 +105,28 @@ public class TrainServiceImpl implements TrainService {
         List<Train> trains = new ArrayList<>();
 
         for (CreateTrainRequest request : requests) {
-            trains.add(buildTrainFromRequest(request));
+
+            Station source = stationRepository.findById(request.getSourceStationId())
+                    .orElseThrow(() -> new RuntimeException("Source station not found"));
+            Station destination = stationRepository.findById(request.getDestinationStationId())
+                    .orElseThrow(() -> new RuntimeException("Destination station not found"));
+
+            Train train = new Train();
+            train.setTrainNumber(request.getTrainNumber());
+            train.setTrainName(request.getTrainName());
+            train.setSourceStation(source);
+            train.setDestinationStation(destination);
+            train.setDepartureTime(request.getDepartureTime());
+            train.setArrivalTime(request.getArrivalTime());
+            train.setTotalSeats(request.getTotalSeats());
+            train.setRunningDays(request.getRunningDays());
+
+            trains.add(train);
         }
 
         List<Train> savedTrains = trainRepository.saveAll(trains);
 
         // return IDs of created trains
         return savedTrains.stream().map(Train::getId).toList();
-    }
-
-    private Train buildTrainFromRequest(CreateTrainRequest request) {
-        List<Station> route = resolveRouteStations(request);
-
-        Train train = new Train();
-        train.setTrainNumber(request.getTrainNumber());
-        train.setTrainName(request.getTrainName());
-        train.setSourceStation(route.getFirst());
-        train.setDestinationStation(route.getLast());
-        train.setDepartureTime(request.getDepartureTime());
-        train.setArrivalTime(request.getArrivalTime());
-        train.setTotalSeats(request.getTotalSeats());
-        train.setRunningDays(request.getRunningDays());
-
-        List<TrainRouteStation> routeStations = new ArrayList<>();
-        for (int index = 0; index < route.size(); index++) {
-            TrainRouteStation routeStation = new TrainRouteStation();
-            routeStation.setTrain(train);
-            routeStation.setStation(route.get(index));
-            routeStation.setStopOrder(index);
-            routeStations.add(routeStation);
-        }
-        train.setRouteStations(routeStations);
-
-        return train;
-    }
-
-    private List<Station> resolveRouteStations(CreateTrainRequest request) {
-        List<Long> routeStationIds = request.getRouteStationIds();
-        if (routeStationIds != null && !routeStationIds.isEmpty()) {
-            if (routeStationIds.size() < 2) {
-                throw new RuntimeException("Train route must contain at least two stations");
-            }
-            return fetchStationsByIds(routeStationIds);
-        }
-
-        if (request.getSourceStationId() != null && request.getDestinationStationId() != null) {
-            return fetchStationsByIds(List.of(request.getSourceStationId(), request.getDestinationStationId()));
-        }
-
-        throw new RuntimeException("Provide routeStationIds or sourceStationId and destinationStationId");
-    }
-
-    private List<Station> fetchStationsByIds(List<Long> stationIds) {
-        Set<Long> dedupe = new HashSet<>(stationIds);
-        if (dedupe.size() != stationIds.size()) {
-            throw new RuntimeException("Duplicate stations are not allowed in train route");
-        }
-
-        List<Station> routeStations = new ArrayList<>();
-        for (Long stationId : stationIds) {
-            if (stationId == null) {
-                throw new RuntimeException("Route station id cannot be null");
-            }
-
-            Station station = stationRepository.findById(stationId)
-                    .orElseThrow(() -> new RuntimeException("Station not found for id: " + stationId));
-            routeStations.add(station);
-        }
-        return routeStations;
-    }
-
-    private String normalizeStationName(String value, String errorMessage) {
-        if (value == null || value.trim().isEmpty()) {
-            throw new RuntimeException(errorMessage);
-        }
-        return value.trim();
-    }
-
-    private Optional<String> findStationNameInRoute(Train train, String searchName) {
-        if (train.getRouteStations() == null || train.getRouteStations().isEmpty()) {
-            return Optional.empty();
-        }
-
-        return train.getRouteStations().stream()
-                .map(routeStation -> routeStation.getStation().getName())
-                .filter(name -> name.equalsIgnoreCase(searchName))
-                .findFirst();
-    }
-
-    private List<String> getRouteStationNames(Train train) {
-        if (train.getRouteStations() != null && !train.getRouteStations().isEmpty()) {
-            return train.getRouteStations().stream()
-                    .map(routeStation -> routeStation.getStation().getName())
-                    .toList();
-        }
-
-        return List.of(
-                train.getSourceStation().getName(),
-                train.getDestinationStation().getName()
-        );
     }
 }
